# director

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Jenkinsfile  machine.settings  project.settings
cmake/: wrap-python.cmake
dependencies_analysis/: run_analysis
dependencies_analysis/data/: graph.dot  graph.ps
dependencies_analysis/data/clean/: dependencies.list  director_dependencies.list  director_import_errors.list  entrypoint_dependencies.list  entrypoint_import_errors.list
dependencies_analysis/data/director/: all_imports.list  dependencies.list  director_all_imports.list  director_dependencies.list  director_import_errors.list  entrypoint_all_imports.list  import_errors.list  plugins_all_imports.list  plugins_dependencies.list  plugins_import_errors.list
dependencies_analysis/docker_assets/: run_analysis
dependencies_analysis/environments/: Dockerfile.clean  Dockerfile.director  build_all
dependencies_analysis/src/: main.py  utils.py
distro/package/: install_runtime_dependencies_ubuntu18.sh
distro/superbuild/cmake/: externals.cmake
distro/travis/: build_and_test.sh  install_deps.sh  test_package_with_docker.sh
distro/vtk/: vtk.dockerfile
docker/: Dockerfile  Dockerfile.devel
examples/launcher/: app_startup
examples/plugins/: ipy_start.py  main.py  setup.sh
examples/plugins/my_plugins/core/: grid.py
examples/plugins/my_plugins/geometry/: __init__.py  line_renderer.py  point_renderer.py  xyz_point_cloud_renderer.py
src/app/: ddQVTKWidgetView.cpp
src/python/: CMakeLists.txt
src/python/director/: camerainteractor.py  componentgraph.py  consoleapp.py  mainwindowapp.py  maptileviewer.py  objectmodel.py  pointpicker.py  propertyset.py  simpletimer.py  taskrunner.py  visualization.py
src/python/director/_DISABLED/: maptileviewer.py
src/python/director/builtin/plugins/camera_bookmarks/: plugin.py
src/python/director/builtin/plugins/camera_bookmarks/lib/: camerabookmarks.py
src/python/director/builtin/plugins/camera_control_panel/: plugin.py
src/python/director/builtin/plugins/grid/: plugin.py
src/python/director/builtin/plugins/history_manager/: plugin.py
src/python/director/builtin/plugins/measurement_tool/: plugin.py
src/python/director/builtin/plugins/measurement_tool/lib/: measurementpanel.py  uipanel.py
src/python/director/builtin/plugins/mesh_loader/: plugin.py
src/python/director/builtin/plugins/mesh_loader/lib/: opendatahandler.py
src/python/director/builtin/plugins/output_console/: plugin.py
src/python/director/builtin/plugins/output_console/lib/: outputconsole.py
src/python/director/builtin/plugins/screen_grabber/: plugin.py
src/python/director/builtin/plugins/screen_grabber/lib/: screengrabberpanel.py
src/python/director/builtin/plugins/script_loader/: plugin.py
src/python/director/builtin/plugins/terrain_mode/: plugin.py
src/python/director/builtin/plugins/xyz_pointcloud_loader/: plugin.py
src/python/director/builtin/plugins/xyz_pointcloud_loader/lib/: xyz_data_handler.py
src/python/director/devel/: __init__.py
src/python/director/devel/plugin/: __init__.py  generic_plugin.py  plugin_manager.py
src/python/director/devel/plugins/: __init__.py  generic_plugin.py  menu_item_plugin.py  plugin_manager.py
src/python/director/plugins/: LEAVE_THIS_EMPTY
src/python/tests/: testOpenVR.py
src/vtk/DRCFilters/: CMakeLists.txt  TestOpenVR.cxx  vtkFrameWidgetRepresentation.cxx
